# MasterOraclePolymarket

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  DESIGN.md  Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt
.playwright-cli/: page-2026-05-06T15-34-09-774Z.yml  page-2026-05-06T15-34-26-412Z.yml  page-2026-05-06T15-34-41-784Z.yml
docs/: PHASES.md  RAILWAY_DEPLOY.md
scripts/: bootstrap_db.py  entrypoint.sh  init_db.py  new_strategy.py  replay.py
src/analytics/: __init__.py  metric_service.py  tag_service.py
src/api/: __init__.py  main.py
src/core/: __init__.py  config.py  events.py  interfaces.py  plugin_loader.py
src/db/: connection.py  event_writer.py  schema.sql  writers.py
src/execution/: __init__.py  _latency.py  _resting.py  calibrated.py  event_replay.py  pnl_snapshotter.py  position_tracker.py  validation.py
src/ground_truth/: __init__.py
src/runner/: __init__.py  aggregator.py  main.py  promotion_gates.py  replay_engine.py  replay_queue.py  retention.py  strategy_runner.py
src/strategies/: __init__.py
src/venues/: __init__.py  _orderbook_store.py  _ws_helper.py  binance_perp.py  deribit.py  kalshi.py  news_rss.py  polymarket_activity.py  polymarket_clob.py  polymarket_markets.py  reddit.py
tests/integration/: test_fill_engine_e2e.py  test_strategy_endurance.py
tests/unit/: test_audit_fixes.py  test_audit_p1_fixes.py  test_malformed_events.py  test_phase1_smoke.py  (+15 more)
web/: Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  railway.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+138 files in other folders)
