[project]
name = "master-paper-trade-lab"
version = "0.1.0"
description = "Research platform for paper-trading prediction-market strategies"
authors = [{ name = "elmorshedydel" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    "asyncio-mqtt>=0.16.2",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.27",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pyyaml>=6.0.1",
    "watchfiles>=0.21.0",
    "structlog>=24.1.0",
    "orjson>=3.9.15",
    "tenacity>=8.2.3",
    "python-dateutil>=2.9.0",
    "feedparser>=6.0.11",
    "praw>=7.7.1",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.2",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "ipython>=8.22.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "src/strategies"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
